# template

./: README.md  main.py  pyproject.toml  requirements.txt
app/: routes.py
app/controllers/: home_controller.py  user_controller.py
templates/: index.html
